# Role_Discord_Bot

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  KEEP_ALIVE.md  README.md  error.txt  keep_alive.py  keep_alive.sh  roles.json
.github/workflows/: docker-build.yml  rust-tests.yml
src/: commands.rs  db.rs  http_server.rs  main.rs
