[package]
name = "discord-role-restore"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.80"
serenity = { version = "0.12", default-features = false, features = [
    "client", "gateway", "model", "cache", "http", "rustls_backend",
] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.31", features = ["bundled", "chrono"] }
chrono = "0.4"
axum = "0.7"
tower = "0.4"